theme/rebot/log.css
/* ... */
.children{
    margin-left:66px
}
.metadata{
    font-size:.875em;
    margin-bottom:8px;
    margin-top:8px;
    padding-right:5px
}
.metadata tr{
    height:30px
}
.metadata td{
    padding:0
}
.metadata td span{
    display:inline-block;
    margin-bottom:8px
}
.metadata .message{
    font-family:"PT Mono",monospace
}
.test{
    border:0;
    margin:0;
    padding:0
}
.messages{
    border-top:1px solid #E5E5EA;
    margin:0;
    padding:8px 0;
}
.messages td{
    padding:0
}
.messages .time,.messages .message{
    font-family:"PT Mono",monospace;
    font-size:.875em;
    vertical-align:unset
}
.messages .time{
    padding-right:16px;
    width:120px
}
.messages .message{
    line-height:1.375em;
    padding:0 16px;
    word-break:break-all
}
.message-row:hover .select-message div{
    background:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAABmJLR0QA/wD/AP+gvaeTAAAAkElEQVQoke2RsQkCQRBF3+yusiCoYHhoMzZjAWaXbBdajUXYgWBg4B1qtMk4JmKgK5wmJv7ww5v58ASA1M7ABYqRE2nUPreBupmitgMtc7AB5q9gjzNqaxBXxMy27y5+FWF5GBD7K8RiJ8IkE/JCqI8VTvYfvfPXSgBIzZDsfScoqpIml7sCGRP563gs+JWOG/6FQAtiIqzeAAAAAElFTkSuQmCC") center no-repeat;
    border:0
}
.select-message div{
    border:0;
    padding:0
}
.select-message div:hover{
    opacity:.7
}
/* Documentation headers */
/* Status text colors -- !important allows using them in links */
.fail {
    color: #ce3e01 !important;
    font-weight: bold;
}
.pass {
    color: #098a09 !important;
}
.skip {
    color: #927201 !important;
    font-weight: bold;
}
.label {
    padding: 5px 5px;
    margin-left:5px;
    font-size: 0.75em;
    letter-spacing: 1px;
    white-space: nowrap;
    color: black;
    background-color: #D1D1D6;
    border-radius: 3px;
}
.label.debug, .label.trace, .label.error, .label.keyword {
    letter-spacing: 0;
}
.label.pass, .label.fail, .label.error, .label.skip, .label.warn {
    font-weight: bold;
}
.label.pass {
    background-color: #63C366;
    color: #fff !important;
}
.label.fail, .label.error {
    background-color: #ED5545;
    color: #fff !important;
}
.label.skip, .label.warn {
    background-color: #F29938;
    color: #fff !important;
}
/* Top right header */
/* Statistics table */
/* Statistics graph */
.graph, .empty-graph {
    width: auto;
    height: 10px;
    padding: 0;
}
#statistics-container {
    width: 100%;
}
.empty-graph {
    background: #eee;
}
.pass-bar, .fail-bar, .skip-bar {
    float: left;
    height: 10px;
    border: 0;
}
.fail-bar {
    background: #ED5545;
}
.pass-bar {
    background: #63C366;
}
.skip-bar {
    background: #F29938;
}
/* Tablesorter - adapted from provided Blue Skin */
/* Generic table styles */
/* Summary and total/tag/suite details */
.details {
    border: 1px solid #E5E5EA;
    background-color: #fff;
    border-spacing: 0.2em;
    clear: both;
    width: 65em;
    margin-bottom: 1em;
}
.details th {
    width: 11em;
    text-align: left;
    vertical-align: top;
}
.details td {
    vertical-align: top;
}
.selector th, .selector td {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    white-space: normal;
}
.first-selector th, .first-selector td{
    padding-bottom: 0.2em;
}
.middle-selector th, .middle-selector td {
    padding-top: 0.2em;
    padding-bottom: 0.2em;
}
.last-selector th, .last-selector td{
    padding-top: 0.2em;
}
#print-selector {
    display: none;
}
/* Search */
#search-suite, #search-test, #search-include, #search-exclude {
    width: 25em;
}
#search a:hover {
    text-decoration: none;
}
#search-help div {
    margin: 0.5em 0.5em 0.7em 0;
    padding: 0.7em;
    background: #eee;
    border: 1px solid #E5E5EA;
    border-radius: 3px;
}
#search-help h3, #search-help p {
    margin: 0 0 0.7em 0;
}
.search-help-examples {
    table-layout: auto;
    width: 100%;
}
.search-help-examples, .search-help-examples tr,
.search-help-examples th, .search-help-examples td {
    background: transparent;
    margin: 0;
}
.search-help-examples th, .search-help-examples td {
    padding: 0.2em 0.7em 0.2em 0;
}
.help-item {
    width: 10%;
}
.help-explanation {
    width: 65%;
}
.help-examples {
    width: 25%;
}
/* Tabs - adapted from http://www.htmldog.com/articles/tabs */
#detail-tabs {
    list-style: none;
    padding: 0;
}
.detail-tab {
    float: left;
    background: #D1D1D6;
    border: 1px solid #E5E5EA;
    border-bottom-width: 0;
    margin: 0 0.5em 0 0;
    padding: 10px;
    border-radius: 3px 3px 0 0;
}
.detail-tab:hover {
    background: #E5E5EA;
}
.detail-tab a {
    color: black;
    text-decoration: none;
    font-weight: bold;
    padding: 0 1em;
}
a{
    text-decoration: none;
}
a:hover{
    text-decoration: underline;
    transition:.3s;
}
.detail-tab-selected {
    position: relative;
    background-color: #fff;
    top: 1px;
    color: #2D74EB !important;
}
.detail-tab-selected:hover {
    background: white;
}
/* Test details table */
.details, .statistics {
    width: 100%;
}
#generated-ago, #normal-selector, #search-buttons,
.folding-button, .expand, .hidden, .details-col-toggle {
    display: none;
}
.element-header-text, .children {
    margin: 0;
}
#test-details {
    border-collapse: collapse;
    background: white;
}
#test-details th, #test-details td {
    border: 1px solid #E5E5EA;
}
.details-col-header {
    padding: 0;
}
#print-selector {
    display: table-cell;
}
.tablesorter-header {
    background-image: none;
}
.doc > * {
    margin: 0.7em 1em 0.1em 1em;
    padding: 0;
}
.doc > p, .doc > h1, .doc > h2, .doc > h3, .doc > h4 {
    margin: 0.7em 0 0.1em 0;
}
.doc > *:first-child {
    margin-top: 0.1em;
}
.doc table {
    border: 1px solid #E5E5EA;
    background: transparent;
    border-collapse: collapse;
    empty-cells: show;
    font-size: 0.9em;
}
.doc table th, .doc table td {
    border: 1px solid #E5E5EA;
    background: transparent;
    padding: 0.1em 0.3em;
    height: 1.2em;
}
.doc table th {
    text-align: center;
    letter-spacing: 0.1em;
}
/* ... */

